--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         </form>
     </header>
     <main id="main"></main>
+    <footer>
+        <p>Desarrollador por: Jeffry Kamsteeg Rodiño</p>
+        <p>Todos los derechos reservados © Tatuador Villalobos</p>
+        <p>Año 2021</p>
+    </footer>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./script/script.js" type="module"></script>
 </body>
