--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <main id="main"></main>
     <footer>
         <p>Desarrollador por: Jeffry Kamsteeg Rodiño</p>
-        <p>Todos los derechos reservados © Tatuador Villalobos</p>
-        <p>Año 2021</p>
+        <p>Tatuador Villalobos</p>
+        <p>Año 2021 ©  Todos los derechos reservados</p>
     </footer>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./script/script.js" type="module"></script>
